# periodontal-modeling

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
attic/: _holdoutrs.py
config/: config.yaml
config/data/: data.yaml  root_length_percentages.csv  root_length_percentages.json
config/learner/: learner.yaml
config/mlp/: mlp.yaml
config/resample/: resample.yaml
config/tuning/: tuning.yaml
docker/: app.dockerfile
docs/: index.md  mkdocs.yml
docs/docs/: index.md
docs/reference/: app.md
notebooks/: categorical_distribution.tex  descriptives.ipynb  extent_summary_table.tex  grade_summary_table.tex  improvement.ipynb  months_between.csv  pocketclosure.ipynb  pocketclosure_inf.ipynb  pocketgroup.ipynb  revision.ipynb  revision_2.ipynb  simulation.ipynb  stage_summary_table.tex  summary.tex  test.ipynb  test_df.csv  train_df_grading_check.csv  val_df.csv  validation.ipynb
notebooks/Ergebnisse/: validation.ipynb
notebooks/Revision/: Dataset_Leuven.xlsx  NW1_Grading.xlsx  NW2_Staging.xlsx  Root_length_map.ipynb  root_length_percentages.csv  root_length_percentages.json  stage_summary_table.tex  summary_grades.tex
pamod/: __init__.py  base.py  config.py  dataset.py  features.py  plots.py
pamod/app/: __init__.py  _app_helpers.py  app.py
pamod/base/: __init__.py  _base.py
pamod/benchmarking/: __init__.py  _basebenchmark.py  _baseline.py  _benchmark.py  _inputprocessor.py
pamod/data/: __init__.py  _basedata.py  _dataloader.py  _functions.py  _helpers.py  _preprocessing.py
pamod/descriptives/: __init__.py  _descriptives.py
pamod/evaluation/: __init__.py  _baseeval.py  _eval.py  _fi.py
pamod/inference/: __init__.py  _baseinference.py  _inference.py
pamod/learner/: __init__.py  _learners.py  _mlptrainer.py  _parameters.py
pamod/modeling/: predict.py  train.py
pamod/preprocessing/: __init__.py  _functions.py  _preprocessing.py
pamod/resampling/: __init__.py  _baseresampler.py  _metrics.py  _parameters.py  _resampler.py
pamod/training/: __init__.py  _basetrainer.py  _benchmarking.py  _hebo.py  _metrics.py  _mlptrainer.py  _trainer.py
pamod/tuning/: __init__.py  _basetuner.py  _cvrs.py  _hebo.py  _holdoutrs.py  _parameters.py  _randomsearch.py  _thresholdopt.py
pamod/wrapper/: __init__.py  _basewrapper.py  _wrapper.py
periomod/: base.py
periomod/app/: __init__.py  _app.py  _app_helpers.py  _inputprocessor.py  app.py
periomod/benchmarking/: _basebenchmark.py  _baseline.py  _benchmark.py
periomod/data/: __init__.py  _basedata.py  _dataloader.py  _helpers.py  _preprocessing.py  _simulator.py
periomod/descriptives/: _descriptives.py
periomod/evaluation/: _baseeval.py  _eval.py
periomod/inference/: _baseinference.py  _inference.py
periomod/learner/: _learners.py  _parameters.py
periomod/resampling/: _baseresampler.py  _resampler.py
periomod/training/: _basetrainer.py  _metrics.py  _trainer.py
periomod/tuning/: _basetuner.py  _hebo.py  _randomsearch.py
periomod/wrapper/: __init__.py  _basewrapper.py  _val.py  _wrapper.py
reference/app/: index.html
reference/base/: index.html
reference/data/: index.html
search/: search_index.json
tests/: test_base.py
(+140 files in other folders)
