[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pamod"
version = "0.0.1"
description = "Package for short term periodontal modeling"
authors = [
  { name = "Tobias Brock" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude=[
  ".git",
  ".ruff_cache",
  ".pt",
]

# Include Notebooks
extend-include = ["*.ipynb"]

line-length=120 # if recommended length (79 characters) is too restrictive

[tool.ruff.lint]
# Enable Pyflakes, NumPy specific rules, auch Pydocstyle?
select = ["F", "NPY"]  # order import statements

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["fakenews"]
force-sort-within-sections = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Ignore Deprecation Warnings when running tests
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
